--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "inquirer": "^9.2.11",
-    "mysql": "^2.18.1",
-    "sequelize": "^6.33.0"
+    "mysql": "^2.18.1"
   }
 }
