--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A CLI application to track departments and employees",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node db/seeds.sql"
   },
   "author": "",
   "license": "ISC",
